--- a/stylua.toml
+++ b/stylua.toml
@@ -1,6 +1,11 @@
+syntax = "All"
 column_width = 120
 line_endings = "Unix"
 indent_type = "Spaces"
 indent_width = 4
 quote_style = "AutoPreferDouble"
-call_parentheses = "Always"
+call_parentheses = "None"
+no_call_parentheses = true
+
+[sort_requires]
+enabled = false
